<?xml version="1.0" encoding="UTF-8"?>
<package format="2">
  <name>spline_vio</name>
  <version>0.0.0</version>
  <description>
    vins_estimator
  </description>
  <maintainer email="maplab-dev@mavt.ethz.ch">maplab-developers</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin_simple</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>gflags_catkin</depend>
  <depend>glog_catkin</depend>
  <depend>maplab_common</depend>
  <depend>ceres_catkin</depend>
  <depend>rosbag</depend>
  <depend>tf</depend>
</package>
